# kweel-bot-amino

./: README.md  chatb.txt  cmds.txt  comid.txt  comids.txt  deleted.txt  deleted_messages.json  deleteds.txt  deletes.txt  device.json  frme.txt  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  setup.py  sids.txt
BotAmino/: Bot.py  BotAmino.py  device.json  extensions.py
Tam/l_amino/: client.py  socket.py  sub_client.py
Tam/l_amino/lib/util/: headers.py
amino/: __init__.py  acm.py  client.py  socket.py  sub_client.py
amino/lib/util/: __init__.py  headers.py
pytube/: parser.py
